--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,9 @@
 
 	<body>
 		<div class="page-header"> 
-			
+			{% if user.is_authenticated %}
+				<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+			{% endif %}
 			<h1><a href="/">Django Girls Blog</a></h1>
 		</div>
 		
